--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,8 +72,6 @@ jobs:
               intel: manylinux2014
             matrix: '3.11'
         arch:
-          - name: ARM
-            matrix: arm
           - name: Intel
             matrix: intel
         exclude:
@@ -105,14 +103,14 @@ jobs:
 
     steps:
     - name: Clean workspace
-      uses: Chia-Network/actions/clean-workspace@main
+      uses: Chinilla/actions/clean-workspace@main
 
     - name: Checkout code
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
 
-    - uses: Chia-Network/actions/setup-python@main
+    - uses: Chinilla/actions/setup-python@main
       with:
         python-version: ${{ matrix.python.major-dot-minor }}
 
@@ -155,15 +153,15 @@ jobs:
           python -m pip install --upgrade pip
         CIBW_ENVIRONMENT_MACOS: "MACOSX_DEPLOYMENT_TARGET=10.14 BUILD_VDF_CLIENT=N"
         CIBW_REPAIR_WHEEL_COMMAND_MACOS: >
-          pip uninstall -y delocate && pip install git+https://github.com/Chia-Network/delocate.git
+          pip uninstall -y delocate && pip install git+https://github.com/Chinilla/delocate.git
           && delocate-listdeps {wheel} && delocate-wheel -v {wheel}
           && cp {wheel} {dest_dir}
         CIBW_BEFORE_ALL_WINDOWS: >
-          git clone https://github.com/Chia-Network/mpir_gc_x64.git
+          git clone https://github.com/Chinilla/mpir_gc_x64.git
         CIBW_ENVIRONMENT_WINDOWS: "BUILD_VDF_CLIENT=N SETUPTOOLS_USE_DISTUTILS=stdlib"
         CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: >
           ls -l mpir_gc_x64 && pip uninstall -y delocate
-          && pip install git+https://github.com/Chia-Network/delocate.git
+          && pip install git+https://github.com/Chinilla/delocate.git
           && delocate-wheel -v -i mpir_gc_x64/mpir.dll {wheel}
           && delocate-wheel -v -i mpir_gc_x64/mpir_gc.dll {wheel}
           && delocate-wheel -v -i mpir_gc_x64/mpir_broadwell.dll {wheel}
@@ -207,14 +205,14 @@ jobs:
 
     steps:
     - name: Clean workspace
-      uses: Chia-Network/actions/clean-workspace@main
+      uses: Chinilla/actions/clean-workspace@main
 
     - name: Checkout code
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
 
-    - uses: Chia-Network/actions/setup-python@main
+    - uses: Chinilla/actions/setup-python@main
       with:
         python-version: ${{ matrix.python.major-dot-minor }}
 
@@ -250,14 +248,14 @@ jobs:
 
     steps:
     - name: Clean workspace
-      uses: Chia-Network/actions/clean-workspace@main
+      uses: Chinilla/actions/clean-workspace@main
 
     - name: Checkout code
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
 
-    - uses: Chia-Network/actions/setup-python@main
+    - uses: Chinilla/actions/setup-python@main
       with:
         python-version: ${{ matrix.python.major-dot-minor }}
 
@@ -296,14 +294,14 @@ jobs:
 
     steps:
     - name: Clean workspace
-      uses: Chia-Network/actions/clean-workspace@main
+      uses: Chinilla/actions/clean-workspace@main
 
     - name: Checkout code
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
 
-    - uses: Chia-Network/actions/setup-python@main
+    - uses: Chinilla/actions/setup-python@main
       with:
         python-version: ${{ matrix.python.major-dot-minor }}
 
