--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,6 +72,8 @@ jobs:
               intel: manylinux2014
             matrix: '3.11'
         arch:
+          - name: ARM
+            matrix: arm
           - name: Intel
             matrix: intel
         exclude:
@@ -117,7 +119,6 @@ jobs:
     - name: Install pipx
       run: |
         pip install pipx
-
     - name: Build and test
       env:
         CIBW_BUILD_VERBOSITY_MACOS: 0
@@ -220,7 +221,6 @@ jobs:
       run: |
         pip install build
         python -m build --sdist --outdir dist .
-
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
       with:
@@ -263,12 +263,10 @@ jobs:
       run: |
         pip install flake8
         flake8 tests setup.py
-
     - name: mypy
       run: |
         pip install mypy
         mypy --config-file mypi.ini setup.py tests
-
   upload:
     name: Upload to PyPI - ${{ matrix.os.name }} ${{ matrix.python.major-dot-minor }} ${{ matrix.arch.name }}
     runs-on: ${{ matrix.os.runs-on[matrix.arch.matrix] }}
