--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -99,6 +99,16 @@ jobs:
               major-dot-minor: '3.7'
               cibw-build: 'cp37-*'
               matrix: '3.7'
+            arch:
+              name: ARM
+              matrix: arm
+          - os:
+              name: macOS
+              matrix: macos
+              runs-on:
+                arm: [macOS, ARM64]
+                intel: [macos-latest]
+            python:
               major-dot-minor: '3.8'
               cibw-build: 'cp38-*'
               matrix: '3.8'
