--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
           - name: Ubuntu
             matrix: ubuntu
             runs-on:
-              arm: [Linux, ARM64]
+              arm: buildjet-4vcpu-ubuntu-2204-arm
               intel: [ubuntu-latest]
           - name: Windows
             matrix: windows
